--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".`MainActivity.kt`"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.TemplateApplication">
